[package]
name = "ui"
version = "0.1.0"
edition = "2021"
# Kept in lockstep with the workspace root's MSRV (see Cargo.toml).
rust-version = "1.88"

[[bin]]
name = "ui"
path = "src/main.rs"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
croner = "3"
chrono = "0.4"
gloo-net = { version = "0.7", features = ["http"] }
gloo-timers = { version = "0.4", features = ["futures"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Clipboard", "Document", "DomTokenList", "Element", "EventTarget", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "KeyboardEvent", "Location", "Navigator", "Storage", "Window"] }
log = "0.4"
console_log = "1"

[lints.clippy]
all = "deny"
# Reject a `&self` method that never reads `self` — it should be an associated function instead, so
# the signature doesn't overstate what the method needs from its receiver. Denied root-side since
# #1067, but the `ui` crate has its own `[lints.clippy]` table and doesn't inherit root's extended
# deny-list, so this never applied to `ui/src` despite CI's `clippy` job running `--workspace`. The
# `ui` crate is already clean, so `deny` locks that in.
unused_self = "deny"
# Reject `use some::module::*;` glob imports. Explicit imports make it clear
# at the call site which module a name comes from, avoid silent breakage or
# ambiguity when the globbed module adds a new item, and keep `rust-analyzer`
# "go to definition" unambiguous.
wildcard_imports = "deny"
# Mirrors the root crate's `unwrap_used = "deny"` (see Cargo.toml): a panic in the UI
# crate tears down the running Yew app for the user with no graceful recovery, the
# same class of failure the root crate's lint doc guards against for the server.
# `all` above doesn't cover this — `unwrap_used` is a `restriction`-group lint, not
# part of `clippy::all` — so it needs its own explicit entry.
unwrap_used = "deny"
# Prefer naming the method directly (`ToString::to_string`, `String::as_str`) over
# wrapping it in a closure that only forwards the receiver. Kept in lockstep with
# the same lint already enabled workspace-root-side in Cargo.toml — the `ui`
# crate has its own `[lints]` table (no `workspace = true` inheritance) so it was
# silently exempt despite `clippy --workspace` covering it in CI.
redundant_closure_for_method_calls = "deny"
# Reject a `&mut` parameter that's never actually mutated through. Mirrors the root
# crate's `needless_pass_by_ref_mut = "deny"` (see Cargo.toml) — the `ui` crate has
# its own `[lints.clippy]` table and doesn't inherit root's extended deny-list, so
# this never applied to `ui/src` despite CI's `clippy` job running `--workspace`.
# The `ui` crate is already clean, so `deny` locks that in.
needless_pass_by_ref_mut = "deny"
# Prefer `map_or`/`map_or_else`/`is_some_and` over `.map(f).unwrap_or(_)`. Kept in lockstep with
# the same lint already enabled workspace-root-side in Cargo.toml — the `ui` crate has its own
# `[lints]` table (no `workspace = true` inheritance) so it was silently exempt despite
# `clippy --workspace` covering it in CI. Fixes the 7 violations this surfaced across
# `log_viewer.rs`, `overview_recent_runs.rs`, `routines/form.rs`, `routines/history.rs`, and
# `routines/hooks.rs`.
map_unwrap_or = "deny"
# Reject `match` arms with identical bodies — either the arm is dead code already covered by
# another pattern, or the duplication is an unintentional bug where the bodies were meant to
# differ. Kept in lockstep with the same lint already enabled workspace-root-side in Cargo.toml —
# the `ui` crate has its own `[lints]` table (no `workspace = true` inheritance) so it was silently
# exempt despite `clippy --workspace` covering it in CI. Fixes the 5 violations this surfaced in
# `routines/filter.rs`, where each facet's explicit `Facet::All`/`Facet::Any` arm did nothing that
# the trailing wildcard arm didn't already do.
match_same_arms = "deny"
# Reject `async fn`s that never `.await` anything — they don't need to be async,
# and being async needlessly propagates async-ness to callers. Denied root-side
# (see Cargo.toml), but the `ui` crate has its own `[lints.clippy]` table and
# doesn't inherit root's extended deny-list, so this never applied to `ui/src`
# despite CI's `clippy` job running `--workspace`. The `ui` crate is already
# clean, so `deny` locks that in.
unused_async = "deny"
# Reject leftover `dbg!` debugging macros so they never ship to production.
# Mirrors the root crate's `dbg_macro = "deny"` (see Cargo.toml) — the `ui`
# crate has its own `[lints.clippy]` table and doesn't inherit root's
# extended deny-list, so this never applied to `ui/src` despite CI's
# `clippy` job running `--workspace`. The `ui` crate is already clean, so
# `deny` locks that in.
dbg_macro = "deny"
# Reject leftover `todo!()`/`unimplemented!()` stubs so they never ship to
# production — a stray one would panic the running Yew app on that code
# path. Mirrors the root crate's `todo`/`unimplemented` (see Cargo.toml) —
# the `ui` crate has its own `[lints.clippy]` table and doesn't inherit
# root's extended deny-list, so neither ever applied to `ui/src` despite
# CI's `clippy` job running `--workspace`. The `ui` crate is already clean,
# so `deny` locks that in.
todo = "deny"
unimplemented = "deny"
# Reject a positional `format!`/`write!`/`println!` arg (`format!("{}", x)`) in favor of the
# inlined form (`format!("{x}")`). Kept in lockstep with the same lint already enabled
# workspace-root-side in Cargo.toml — the `ui` crate has its own `[lints]` table (no
# `workspace = true` inheritance) so it was silently exempt despite `clippy --workspace`
# covering it in CI. The `ui` crate is already clean, so `deny` locks that in.
uninlined_format_args = "deny"
# Reject a numeric literal with 5+ digits that has no `_` separators (e.g. `86400`), preferring
# `86_400` so a reviewer can judge magnitude at a glance instead of counting digits one by one.
# Mirrors the root crate's `unreadable_literal = "deny"` (see Cargo.toml) — the `ui` crate has its
# own `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied
# to `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is already clean, so
# `deny` locks that in.
unreadable_literal = "deny"
# Reject `{:?}` (Debug) formatting of a `Path`/`PathBuf` in user-facing output. Debug-formats
# a path with surrounding quotes and escaped separators/backslashes, which reads oddly and
# diverges from every other path already printed via `.display()`. Kept in lockstep with the
# same lint already enabled workspace-root-side in Cargo.toml — the `ui` crate has its own
# `[lints]` table (no `workspace = true` inheritance) so it was silently exempt despite
# `clippy --workspace` covering it in CI. The `ui` crate is already clean, so `deny` locks that in.
unnecessary_debug_formatting = "deny"
# Reject a case-sensitive `.ends_with(".ext")`/`.starts_with(...)` file-extension check in favour
# of `Path::extension()` compared with `eq_ignore_ascii_case`. A literal `.md` check silently
# mismatches an uppercase or mixed-case extension even though macOS's and Windows' default
# filesystems treat the two names as the same file. Mirrors the root crate's
# `case_sensitive_file_extension_comparisons = "deny"` (see Cargo.toml) — the `ui` crate has its
# own `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied
# to `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is already clean, so
# `deny` locks that in.
case_sensitive_file_extension_comparisons = "deny"
# Reject a by-value `&self`-sized `Copy` parameter (e.g. `bool`, `u32`, small enums) passed by
# reference — the indirection costs a pointer dereference for no benefit over passing the value
# directly. Mirrors the root crate's `trivially_copy_pass_by_ref = "deny"` (see Cargo.toml) — the
# `ui` crate has its own `[lints.clippy]` table and doesn't inherit root's extended deny-list, so
# this never applied to `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is
# already clean, so `deny` locks that in.
trivially_copy_pass_by_ref = "deny"
# Reject an `else` branch after an `if` whose every path already diverges (return/break/continue/
# panic) — the `else` adds a level of nesting for nothing, since control flow never falls through
# to it. Mirrors the root crate's `redundant_else = "deny"` (see Cargo.toml) — the `ui` crate has
# its own `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never
# applied to `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is already
# clean, so `deny` locks that in.
redundant_else = "deny"
# Reject collecting an iterator into a `Vec`/collection only to immediately iterate over it again
# (or check its length/emptiness) — the intermediate collection is pure allocation overhead the
# iterator chain never needed. Mirrors the root crate's `needless_collect = "deny"` (see
# Cargo.toml) — the `ui` crate has its own `[lints.clippy]` table and doesn't inherit root's
# extended deny-list, so this never applied to `ui/src` despite CI's `clippy` job running
# `--workspace`. The `ui` crate is already clean, so `deny` locks that in.
needless_collect = "deny"
# Reject `.push_str(&format!(...))` in favour of `write!`/`writeln!` directly into the `String`.
# The `format!` call allocates a throwaway `String` only to immediately copy its contents into the
# target and drop it, so it's pure overhead that `write!` avoids by writing straight into the
# existing buffer. Mirrors the root crate's `format_push_string = "deny"` (see Cargo.toml) — the
# `ui` crate has its own `[lints.clippy]` table and doesn't inherit root's extended deny-list, so
# this never applied to `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is
# already clean, so `deny` locks that in.
format_push_string = "deny"
# Reject a `match` whose only non-wildcard arm destructures a single pattern, with the rest
# falling to a catch-all `else`-like arm — `if let ... else` says the same thing without the
# unused generality of `match`, keeping the two-way branch as readable as a plain `if`. Mirrors
# the root crate's `single_match_else = "deny"` (see Cargo.toml) — the `ui` crate has its own
# `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied to
# `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is already clean, so
# `deny` locks that in.
single_match_else = "deny"
# Reject an item (`use`, `const`, etc.) declared after a statement in the same block — items are
# scoped to the whole block from the start regardless of where they're written, so placing one
# mid-block after other code misleads the reader into thinking order matters here. Hoisting it to
# the top of the block states that up front. Mirrors the root crate's `items_after_statements =
# "deny"` (see Cargo.toml) — the `ui` crate has its own `[lints.clippy]` table and doesn't inherit
# root's extended deny-list, so this never applied to `ui/src` despite CI's `clippy` job running
# `--workspace`. The `ui` crate is already clean, so `deny` locks that in.
items_after_statements = "deny"
# Reject `.cloned()` on an iterator of `&Copy` items (e.g. `&i32`, `&bool`) in favour of
# `.copied()` — cloning a `Copy` type is a needlessly indirect way to say "copy this value";
# `.copied()` states the intent directly and optimizes identically. Mirrors the root crate's
# `cloned_instead_of_copied = "deny"` (see Cargo.toml) — the `ui` crate has its own
# `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied
# to `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is already clean,
# so `deny` locks that in.
cloned_instead_of_copied = "deny"
# Prefer `String::new()` over `"".into()`/`"".to_string()`/`"".to_owned()` for constructing an
# empty `String` — it says "empty string" directly instead of making the reader infer it from an
# empty literal plus a conversion call. Mirrors the root crate's `manual_string_new = "deny"` (see
# Cargo.toml) — the `ui` crate has its own `[lints.clippy]` table and doesn't inherit root's
# extended deny-list, so this never applied to `ui/src` despite CI's `clippy` job running
# `--workspace`. The `ui` crate is already clean, so `deny` locks that in.
manual_string_new = "deny"
# Require every `#[allow(...)]` suppression to carry a `reason = "..."` so reviewers can tell
# at a glance why the lint was silenced, and silenced lints stay documented as the code
# evolves. Mirrors the root crate's `allow_attributes_without_reason = "deny"` (see Cargo.toml)
# — the `ui` crate has its own `[lints.clippy]` table and doesn't inherit root's extended
# deny-list, so this never applied to `ui/src` despite CI's `clippy` job running `--workspace`.
# The `ui` crate is already clean, so `deny` locks that in.
allow_attributes_without_reason = "deny"
# Require a trailing `;` on the last statement of a `()`-returning block so statement-only blocks
# read consistently and intent stays explicit — otherwise the final expression reads like a
# tail-position return value even though the block discards it. Mirrors the root crate's
# `semicolon_if_nothing_returned = "deny"` (see Cargo.toml) — the `ui` crate has its own
# `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied to
# `ui/src` despite CI's `clippy` job running `--workspace`. Fixes the 10 violations this surfaced
# across `main.rs`, `routines/actions.rs`, and `routines/page.rs` — all `Callback::from` closures
# whose body was a bare `spawn_local(...)`/`toast.emit(...)` call with no trailing semicolon.
semicolon_if_nothing_returned = "deny"
# Reject `mem::forget` (and `Box::leak`-style forgetting) of a value that has a `Drop` impl,
# leaking the resource it would otherwise release. Mirrors the root crate's `mem_forget = "deny"`
# (see Cargo.toml) — the `ui` crate has its own `[lints.clippy]` table and doesn't inherit root's
# extended deny-list, so this never applied to `ui/src` despite CI's `clippy` job running
# `--workspace`. The `ui` crate is already clean, so `deny` locks that in.
mem_forget = "deny"
# Reject `for x in collection.iter()`/`.iter_mut()` in favour of `for x in &collection`/
# `&mut collection` — the reference syntax is shorter and states "borrow and iterate" without
# making the reader confirm `.iter()` isn't secretly `.into_iter()` (which would move). Mirrors
# the root crate's `explicit_iter_loop = "deny"` (see Cargo.toml) — the `ui` crate has its own
# `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied to
# `ui/src` despite CI's `clippy` job running `--workspace`. Fixes the 2 violations this surfaced
# in `day_timeline.rs`.
explicit_iter_loop = "deny"
# Companion to `explicit_iter_loop` above: reject `for x in collection.into_iter()` in favour of
# the equivalent `for x in collection` — `.into_iter()` is redundant since a plain `for` loop
# already calls it implicitly, so spelling it out adds noise without adding meaning. Mirrors the
# root crate's `explicit_into_iter_loop = "deny"` (see Cargo.toml) — the `ui` crate has its own
# `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied to
# `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is already clean, so
# `deny` locks that in.
explicit_into_iter_loop = "deny"
# Reject a raw string literal (`r#"..."#`) whose `#` delimiters aren't needed because the string
# body contains no unescaped `"` that would otherwise terminate it early. The extra hashes are
# pure noise once nothing inside requires them. Mirrors the root crate's
# `needless_raw_string_hashes = "deny"` (see Cargo.toml) — the `ui` crate has its own
# `[lints.clippy]` table and doesn't inherit root's extended deny-list, so this never applied to
# `ui/src` despite CI's `clippy` job running `--workspace`. The `ui` crate is already clean, so
# `deny` locks that in.
needless_raw_string_hashes = "deny"
# Prefer `let PATTERN = expr else { diverge }` over a `match` whose only non-binding arm
# diverges (return/continue/break) — the happy-path binding stays unindented instead of
# living inside a `match` arm. Mirrors the root crate's `manual_let_else = "deny"` (see
# Cargo.toml) — the `ui` crate has its own `[lints.clippy]` table and doesn't inherit
# root's extended deny-list, so this never applied to `ui/src` despite CI's `clippy` job
# running `--workspace`. Fixes the 1 violation this surfaced in `routines/state.rs`.
manual_let_else = "deny"
# Reject `if !condition { A } else { B }` in favour of `if condition { B } else { A }` to
# eliminate double-negation and reduce cognitive load when reading branches. Mirrors the root
# crate's `if_not_else = "deny"` (see Cargo.toml) — the `ui` crate has its own `[lints.clippy]`
# table and doesn't inherit root's extended deny-list, so this never applied to `ui/src` despite
# CI's `clippy` job running `--workspace`. Fixes the 2 violations this surfaced in `header.rs`
# and `overview.rs`.
if_not_else = "deny"
